refresh first-order text

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 		<nav class="header-menu">
 			<div class="base__container menu__container">
 				<div class="header-logo__container">
-				<img class="header__logo" src="img/logo.svg" alt="Shop Logo">
+					<img class="header__logo" src="img/logo.svg" alt="Shop Logo">
 				</div>
 				<div class="header-links">
 					<a class="header__link" href="#about">About us.</a>
@@ -36,8 +36,10 @@
 					<a class="header__link" href="#contact-us">Contact us.</a>
 				</div>
 				<div class="header-socials">
-					<a href="https://facebook.com"><img class="header__social" src="img/facebook.svg" alt="Face Book"></a>___
-					<a href="https://instagram.com"><img class="header__social" src="img/instagram.svg" alt="Instagram"></a>___
+					<a href="https://facebook.com"><img class="header__social" src="img/facebook.svg"
+							alt="Face Book"></a>___
+					<a href="https://instagram.com"><img class="header__social" src="img/instagram.svg"
+							alt="Instagram"></a>___
 					<a href="https://youtube.com"><img class="header__social" src="img/youtube.svg" alt="Youtube"></a>
 				</div>
 			</div>
@@ -46,7 +48,8 @@
 			<div class="base__container">
 				<div class="aspire__container">
 					<h4 class="header__h4">ASPIRE TO MORE</h4>
-					<h1 class="header__h1">new <span class="header__h1-accent">collections</span> by top brands<span class="header__h1-accent">.</span></h1>
+					<h1 class="header__h1">new <span class="header__h1-accent">collections</span> by top brands<span
+							class="header__h1-accent">.</span></h1>
 					<a href="#collection" class="header__link-button">Shop Now ⮕</a>
 				</div>
 			</div>
@@ -67,26 +70,30 @@
 						<div class="flex-box__item">
 							<img class="flex-box__svg" src="img/why-choose-us/choose-us__shipping-svg.svg" alt="car">
 							<h3 class="flex-box__h3">free shipping over $90</h3>
-							<p class="flex-box__paragraph">Get advantage of our free worldwide shipping on all orders over
+							<p class="flex-box__paragraph">Get advantage of our free worldwide shipping on all orders
+								over
 								$90.</p>
 						</div>
 						<div class="flex-box__item">
 							<img class="flex-box__svg" src="img/why-choose-us/choose-us__return-svg.svg" alt="box">
 							<h3 class="flex-box__h3">easy 30-day return</h3>
-							<p class="flex-box__paragraph">If the item does not suit you, please send it back to us within 30
+							<p class="flex-box__paragraph">If the item does not suit you, please send it back to us
+								within 30
 								days.</p>
 						</div>
 						<div class="flex-box__item">
 							<img class="flex-box__svg" src="img/why-choose-us/choose-us__eco-svg.svg" alt="eco">
 							<h3 class="flex-box__h3">eco materials</h3>
-							<p class="flex-box__paragraph">All items are made with at least 30% recycled materials and zero
+							<p class="flex-box__paragraph">All items are made with at least 30% recycled materials and
+								zero
 								virgin
 								polyester.</p>
 						</div>
 						<div class="flex-box__item">
 							<img class="flex-box__svg" src="img/why-choose-us/choose-us__payment-svg.svg" alt="payment">
 							<h3 class="flex-box__h3">20 payment methods</h3>
-							<p class="flex-box__paragraph">Pay for your orders with credit cards, PayPal, AliPay, and other
+							<p class="flex-box__paragraph">Pay for your orders with credit cards, PayPal, AliPay, and
+								other
 								payment methods.</p>
 						</div>
 					</div>
@@ -103,20 +110,26 @@
 					<H2 class="about__h2">About us<span class="about__h2-accent">.</span></H2>
 					<div class="about__divider"></div>
 					<br>
-					<h5 class="about__h5">Workout is an American fitness store created by fitness geeks for those who love
+					<h5 class="about__h5">Workout is an American fitness store created by fitness geeks for those who
+						love
 						sport and try to keep fit.</h5>
 					<br><br><br>
 					<p class="about__p">At Workout, we know that great results do not come from standing still. We all
-						need to move, push boundaries, and achieve better results every day. The mission of our shop is to
+						need to move, push boundaries, and achieve better results every day. The mission of our shop is
+						to
 						support you in this.</p>
 					<br><br>
-					<p class="about__p">We're sure that everyday fitness can change your lives and bodies forever. And we
+					<p class="about__p">We're sure that everyday fitness can change your lives and bodies forever. And
+						we
 						keep selling comfortable and high-tech clothes and shoes for your outstanding results.</p>
 					<br><br>
 					<div class="about-socials">
-						<a href="https://facebook.com"><img class="about__social" src="img/facebook.svg" alt="Face Book"></a>__
-						<a href="https://instagram.com"><img class="about__social" src="img/instagram.svg" alt="Instagram"></a>__
-						<a href="https://youtube.com"><img class="about__social" src="img/youtube.svg" alt="Youtube"></a>
+						<a href="https://facebook.com"><img class="about__social" src="img/facebook.svg"
+								alt="Face Book"></a>__
+						<a href="https://instagram.com"><img class="about__social" src="img/instagram.svg"
+								alt="Instagram"></a>__
+						<a href="https://youtube.com"><img class="about__social" src="img/youtube.svg"
+								alt="Youtube"></a>
 					</div>
 				</div>
 			</div>
@@ -129,10 +142,12 @@
 				<div class="base__wrapper">
 					<h2 class="base__h2">mid-season sale<span class="base__span">.</span></h2>
 					<div class="base__separator"></div>
-					<p class="base__subheader">Shop clothes and trainers that are chosen by thousands of our clients. Click
+					<p class="base__subheader">Shop clothes and trainers that are chosen by thousands of our clients.
+						Click
 						on
 						the
-						image to see the product details and click Add to Cart to make the purchase. We are committed to give
+						image to see the product details and click Add to Cart to make the purchase. We are committed to
+						give
 						you
 						the
 						best buying experience!
@@ -184,13 +199,13 @@
 		</section>
 		<!-- End of MidSeasonSale Olga Bondarenko-->
 		<!-- Start of Discount Олександр ALEKS code -->
-	<section class="discount-niger">
+		<section class="discount-niger">
 			<div class="base__container">
 				<h4>SALE OF THE MONTH</h4>
 				<h1 class="discount__h1">Get Your Discount<span class="discount__h1-red">.</span></h1>
 				<a href="#sale" class="discount__link-button">Shop Now ⮕</a>
 			</div>
-	</section>
+		</section>
 
 		<!-- End of Discount ALEKS code -->
 
@@ -201,7 +216,8 @@
 				<div class="main-collection__title text">
 					<p class="text__title">main COLLECTION</p>
 					<div class="line"></div>
-					<p class="text__subtitle">Shop our main fitness collection for men and women represented by the famous
+					<p class="text__subtitle">Shop our main fitness collection for men and women represented by the
+						famous
 						brands.</p>
 				</div>
 				<!-- ============================================================= -->
@@ -252,8 +268,10 @@
 				<div class="deal__content">
 					<div class="deal_body">
 						<h2 class="deal__title">Deal of the month<span class="title-dot">.</span></h2>
-						<div class="deal__text-price">puma sports bra<span class="deal__price">$50</span><span class="deal__crossed-out"><s>$70</s></span></div>
-						<p class="deal__text">Start your fitness story right away with this<br>comfortable bra and get advantage of our discount.</p>
+						<div class="deal__text-price">puma sports bra<span class="deal__price">$50</span><span
+								class="deal__crossed-out"><s>$70</s></span></div>
+						<p class="deal__text">Start your fitness story right away with this<br>comfortable bra and get
+							advantage of our discount.</p>
 						<a class="deal__link" href="#Newarrivals"><span>More Details</span></a>
 						<div class="deal__countdown">
 							<div class="countdown days">
@@ -276,7 +294,8 @@
 					</div>
 				</div>
 				<div class="deal__image">
-					<img class="deal__img"src="../img/deal-of-the-month/deal-collection.jpg" alt="image-clothes" class="deal__img">
+					<img class="deal__img" src="../img/deal-of-the-month/deal-collection.jpg" alt="image-clothes"
+						class="deal__img">
 				</div>
 			</div>
 		</section>
@@ -285,100 +304,92 @@
 		<!-- Start of New Arrivals -->
 		<!-- End of New Arrivals -->
 
-	<footer class="footer">
-		<section class="footer__container">
-			<!--first section of footer comntainer-->
-			<div class="footer__container__top">
-				<div class="container__top__inside">
+		<footer class="footer">
+			<section class="footer__container">
+				<!--first section of footer comntainer-->
+				<div class="footer__container__top">
 					<div class="container__top__inside__empty">
 						<!--empty div-->
 					</div>
-					<div class="container__top__inside__first-order">
-						<!--first order div-->
-						<div class="first-order__inside">
-							<div class="first-order__inside__text">
-								<img class="first-order__inside__icon" src="" alt="logo">
-								<span>10%</span>
-								<span>OFF YOUR FIRST ORDER. SIGN UP TO OUR NEWSLETTER TO GET THIS SPECIAL
-									OFFER.</span>
-							</div>
-						</div>
+					<div class="container__top__inside__first-order"><!--first order div-->						
+						<img class="first-order__inside__icon" src="" alt="logo">
+						<p class="first-order__text"><span class="footer__ten__procent">10%</span>OFF YOUR FIRST ORDER. SIGN UP TO OUR NEWSLETTER TO GET THIS SPECIAL OFFER.</p>
 					</div>
 					<div class="container__top__inside__form">
 						<!--form div-->
 						<form class="footer__form" action="">
 							<input id="form__email" type="email" placeholder="Your email address" required>
-							<button id="form__button" type="submit">Subscribe</button>
 						</form>
+						<button id="form__button" type="submit">Subscribe</button>
 					</div>
 				</div>
-			</div>
+				</div>
 
-			<!--second section of footer comntainer-->
-			<div class="footer__container__middle">
-				<div class="footer__logo">
-					<div class="footer__logo__container">
-						<img src="img/logo.svg" alt="LOGO">
-						<p class="footer__logo__text">
-							Workout offers fitness clothing and footwear for those who want to change their lives
-							and bodies for better.
-						</p>
+				<!--second section of footer comntainer-->
+				<div class="footer__container__middle">
+					<div class="footer__logo">
+						<div class="footer__logo__container">
+							<img src="img/logo.svg" alt="LOGO">
+							<p class="footer__logo__text">
+								Workout offers fitness clothing and footwear for those who want to change their lives
+								and bodies for better.
+							</p>
+						</div>
 					</div>
+					<div class="footer__navigation">
+						<span class="footer__navigation__title">
+							NAVIGATION
+						</span>
+						<div class="navigation__link"></div>
+						<div>
+							<a class="footer__navigation__links" href="#about">About us.</a>
+							<a class="footer__navigation__links" href="#collection">Collection.</a>
+							<a class="footer__navigation__links" href="#blog.html">Blog.</a>
+							<a class="footer__navigation__links" href="#contacts.html">Contacts.</a>
+						</div>
+					</div>
+					<nav class="footer__shop__container">
+						<span class="footer__navigation__title">
+							SHOP
+						</span>
+						<div class="shop__line"></div>
+						<div>
+							<a class="footer__shop__links" href="#woman">Woman.</a>
+							<a class="footer__shop__links" href="#man">Man.</a>
+							<a class="footer__shop__links" href="#shoes">Shoes.</a>
+							<a class="footer__shop__links" href="#sale">Sale.</a>
+						</div>
+					</nav>
+					<nav class="footer__follow-us">
+						<span class="footer__navigation__title">
+							FOLLOW US
+						</span>
+						<div class="follow-us__line"></div>
+						<div class="footer__follow-us__link">
+							<a href="https://facebook.com">
+								<i class="fa-brands fa-facebook-square"></i>
+							</a>
+							<a href="https://instagram.com">
+								<i class="fa-brands fa-instagram-square"></i>
+							</a>
+							<a href="https://youtube.com">
+								<i class="fa-brands fa-youtube-square"></i>
+							</a>
+						</div>
+					</nav>
 				</div>
-				<div class="footer__navigation">
-					<span class="footer__navigation__title">
-						NAVIGATION
-					</span>
-					<div class="navigation__link"></div>
-					<div>
-						<a class="footer__navigation__links" href="#about">About us.</a>
-						<a class="footer__navigation__links" href="#collection">Collection.</a>
-						<a class="footer__navigation__links" href="#blog.html">Blog.</a>
-						<a class="footer__navigation__links" href="#contacts.html">Contacts.</a>
-					</div>
-				</div>
-				<nav class="footer__shop__container">
-					<span class="footer__navigation__title">
-						SHOP
-					</span>
-					<div class="shop__line"></div>
-					<div>
-						<a class="footer__shop__links" href="#woman">Woman.</a>
-						<a class="footer__shop__links" href="#man">Man.</a>
-						<a class="footer__shop__links" href="#shoes">Shoes.</a>
-						<a class="footer__shop__links" href="#sale">Sale.</a>
-					</div>
-				</nav>
-				<nav class="footer__follow-us">
-					<span class="footer__navigation__title">
-						FOLLOW US
-					</span>
-					<div class="follow-us__line"></div>
-					<div class="footer__follow-us__link">
-						<a href="https://facebook.com">
-							<i class="fa-brands fa-facebook-square"></i>
-						</a>
-						<a href="https://instagram.com">
-							<i class="fa-brands fa-instagram-square"></i>
-						</a>
-						<a href="https://youtube.com">
-							<i class="fa-brands fa-youtube-square"></i>
-						</a>
-					</div>
-				</nav>
-			</div>
 
-			<!--third section of footer comntainer-->
-			<div id="contact-us" class="footer__container__bottom">
-				<p class="footer__container__bottom__text">
-					© Created by
-				</p>
-				<p class="footer__container__bottom__text">
-					All rights Reserved
-				</p>
-			</div>
-		</section>
-	</footer>
+				<!--third section of footer comntainer-->
+				<div id="contact-us" class="footer__container__bottom">
+					<p class="footer__container__bottom__text">
+						© Created by
+					</p>
+					<p class="footer__container__bottom__text">
+						All rights Reserved
+					</p>
+				</div>
+			</section>
+		</footer>
 </body>
 
 </html>
