debug hrml error

--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
 					</div>
 				</div>
 				<div class="deal__image">
-					<img class="deal__img"src="../img/deal-of-the-month/deal-collection.jpg" alt="image-clothes" class="deal__img">
+					<img class="deal__img" src="../img/deal-of-the-month/deal-collection.jpg" alt="image-clothes">
 				</div>
 			</div>
 		</section>
