--- a/index.html
+++ b/index.html
@@ -315,33 +315,26 @@
 						<img class="first-order__inside__icon" src="" alt="logo">
 						<p class="first-order__text"><span class="footer__ten__procent">10%</span>OFF YOUR FIRST ORDER. SIGN UP TO OUR NEWSLETTER TO GET THIS SPECIAL OFFER.</p>
 					</div>
-					<div class="container__top__inside__form">
-						<!--form div-->
-						<form class="footer__form" action="">
-							<input id="form__email" type="email" placeholder="Your email address" required>
-						</form>
+					<div class="container__top__inside__form"><!--form div-->						
+						<input class="form__email" id="form__email" type="email" placeholder="Your email address" required>
 						<button id="form__button" type="submit">Subscribe</button>
 					</div>
 				</div>
-				</div>
-
 				<!--second section of footer comntainer-->
 				<div class="footer__container__middle">
 					<div class="footer__logo">
-						<div class="footer__logo__container">
-							<img src="img/logo.svg" alt="LOGO">
-							<p class="footer__logo__text">
-								Workout offers fitness clothing and footwear for those who want to change their lives
-								and bodies for better.
-							</p>
-						</div>
+						<img class="footer__main__logo" src="img/logo.svg" alt="LOGO">
+						<p class="footer__logo__text">
+							Workout offers fitness clothing and footwear for those who want to change their lives
+							and bodies for better.
+						</p>
 					</div>
 					<div class="footer__navigation">
 						<span class="footer__navigation__title">
 							NAVIGATION
 						</span>
-						<div class="navigation__link"></div>
-						<div>
+						<div class="navigation__line"></div>
+						<div class="navigation__link">
 							<a class="footer__navigation__links" href="#about">About us.</a>
 							<a class="footer__navigation__links" href="#collection">Collection.</a>
 							<a class="footer__navigation__links" href="#blog.html">Blog.</a>
@@ -366,15 +359,9 @@
 						</span>
 						<div class="follow-us__line"></div>
 						<div class="footer__follow-us__link">
-							<a href="https://facebook.com">
-								<i class="fa-brands fa-facebook-square"></i>
-							</a>
-							<a href="https://instagram.com">
-								<i class="fa-brands fa-instagram-square"></i>
-							</a>
-							<a href="https://youtube.com">
-								<i class="fa-brands fa-youtube-square"></i>
-							</a>
+							<a href="https://facebook.com"><img class="footer__social" src="img/facebook.svg" alt="Face Book"></a>___
+							<a href="https://instagram.com"><img class="footer__social" src="img/instagram.svg" alt="Instagram"></a>
+							<a href="https://youtube.com"><img class="footer__social" src="img/youtube.svg" alt="Youtube"></a>
 						</div>
 					</nav>
 				</div>
