Some hovers added

--- a/index.html
+++ b/index.html
@@ -194,9 +194,11 @@
 		<!-- Start of Discount Олександр ALEKS code -->
 		<section class="discount-niger">
 			<div class="base__container">
-				<h4>SALE OF THE MONTH</h4>
-				<h1 class="discount__h1">Get Your Discount<span class="base__span">.</span></h1>
-				<a href="#sale" class="discount__link-button">Shop Now ⮕</a>
+				<div class="month__container">
+					<h4 class="discount__h4">SALE OF THE MONTH</h4>
+					<h1 class="discount__h1">Get Your Discount<span class="base__span">.</span></h1>
+					<a href="#sale" class="discount__link-button">Shop Now ⮕</a>
+				</div>
 			</div>
 		</section>
 
@@ -204,7 +206,7 @@
 
 		<!-- Start of Main Collection Koval =======================================================================================================-->
 
-		<section id="#collection" class="main-collection">
+		<section id="collection" class="main-collection">
 			<div class="main-collection__about __container">
 				<div class="main-collection__title text">
 					<h2 class="text__title">main COLLECTION<span class="base__span">.</span></h2>
