--- a/index.html
+++ b/index.html
@@ -258,39 +258,41 @@
 		<!-- End of Main Collection Koval==============================================================================================================================-->
 
 		<!-- Start of Deal of the month Vitalii Nadych-->
-		<section class="dealOfTheMonth">
-			<div class="deal__container">
-				<div class="deal__content">
-					<div class="deal_body">
-						<h2 class="deal__title">Deal of the month<span class="base__span">.</span></h2>
-						<div class="deal__text-price">puma sports bra<span class="deal__price">$50</span><span class="deal__crossed-out"><s>$70</s></span></div>
-						<p class="deal__text">Start your fitness story right away with this<br>comfortable bra and get advantage of our discount.</p>
-						<a class="deal__link" href="#Newarrivals"><span>More Details</span></a>
-						<div class="deal__countdown">
-							<div class="countdown days">
-								<div class="days">Time</div>
-								<div>Days</div>
-							</div>
-							<div class="countdown hours">
-								<div class="hours">Time</div>
-								<div>Hours</div>
-							</div>
-							<div class="countdown minutes">
-								<div class="minutes">Time</div>
-								<div>Minutes</div>
-							</div>
-							<div class="countdown seconds">
-								<div class="seconds">Time</div>
-								<div>Seconds</div>
+		<body>
+			<section class="dealOfTheMonth">
+				<div class="deal__container">
+					<div class="deal__content">
+						<div class="deal_body">
+							<h2 class="deal__title">Deal of the month<span class="title-dot">.</span></h2>
+							<div class="deal__text-price">puma sports bra<span class="deal-price">$50</span><span class="deal__crossed-out"><s>$70</s></span></div>
+							<p class="deal__text">Start your fitness story right away with this<br>comfortable bra and get advantage of our discount.</p>
+							<a class="deal__link" href="#Newarrivals"><span class="deal-arrow">More Details</span></a>
+							<div class="deal__countdown">
+								<div class="countdown">
+									<div class="days item">Time</div>
+									<div class="count">Days</div>
+								</div>
+								<div class="countdown hours">
+									<div class="hours item">Time</div>
+									<div class="count">Hours</div>
+								</div>
+								<div class="countdown minutes">
+									<div class="minutes item">Time</div>
+									<div class="count">Minutes</div>
+								</div>
+								<div class="countdown seconds">
+									<div class="seconds item">Time</div>
+									<div class="count">Seconds</div>
+								</div>
 							</div>
 						</div>
 					</div>
+					<div class="deal__image">
+						<img class="deal__img" src="../img/deal-of-the-month/deal-collection.jpg" alt="image-clothes">
+					</div>
 				</div>
-				<div class="deal__image">
-					<img class="deal__img" src="../img/deal-of-the-month/deal-collection.jpg" alt="image-clothes">
-				</div>
-			</div>
-		</section>
+			</section>
+		</body>
 		<!-- End of Deal of the month Vitalii Nadych-->
 
 		<!-- Start of New Arrivals -->
