--- a/index.html
+++ b/index.html
@@ -371,7 +371,8 @@
 				</div>
 			</section>
 		</footer>
-</body>
+		<script src="js/burger-menu.js"></script>
+	</body>
 
 </html>
 <!-- End of Footer -->
