About us block adaptized for mobile

--- a/index.html
+++ b/index.html
@@ -273,7 +273,6 @@
 		<!-- End of Main Collection Koval==============================================================================================================================-->
 
 		<!-- Start of Deal of the month Vitalii Nadych-->
-		<body>
 			<section class="dealOfTheMonth">
 				<div class="deal__container">
 					<div class="deal__content">
@@ -307,12 +306,11 @@
 					</div>
 				</div>
 			</section>
-		</body>
 		<!-- End of Deal of the month Vitalii Nadych-->
 
 		<!-- Start of New Arrivals -->
 		<!-- End of New Arrivals -->
-
+	</main>
 		<footer class="footer">
 			<section class="footer__container">
 				<!--first section of footer comntainer-->
