Menu active underlining added and other minor corrections

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 				<div>
 					<h6 class="header__h6">We’ve extended our returns period to 30 days.</h6>
 				</div>
-				<div><a href="mailto:workout@email.com" class="header__contact">workout@email.com</a></div>
-				<div><a href="tel:12345678900" class="header__contact">+1 (234) 567 89 00</a></div>
+				<div class="grid__contact"><a href="mailto:workout@email.com" class="header__contact">workout@email.com</a></div>
+				<div class="grid__contact"><a href="tel:12345678900" class="header__contact">+1 (234) 567 89 00</a></div>
 			</div>
 		</article>
 		<nav class="header-menu">
@@ -29,33 +29,33 @@
 					<img class="header__logo" src="img/logo.svg" alt="Shop Logo">
 				</div>
 				<div class="header-links">
-						<a class="header__link" href="#about">About us.</a>
-						<a class="header__link" href="#sale">Sale.</a>
-						<a class="header__link" href="#collection">Collection.</a>
-						<a class="header__link" href="blog.html">Blog.</a>
-						<a class="header__link" href="#contact-us">Contact us.</a>
+						<div class="header__link-underline"><a class="header__link" href="#about">About us.</a><div class="underline"></div></div>
+						<div class="header__link-underline"><a class="header__link" href="#sale">Sale.</a><hr><div class="underline"></div></div>
+						<div class="header__link-underline"><a class="header__link" href="#collection">Collection.</a><div class="underline"></div></div>
+						<div class="header__link-underline"><a class="header__link" href="blog.html">Blog.</a><div class="underline"></div></div>
+						<div class="header__link-underline"><a class="header__link" href="#contact-us">Contact us.</a><div class="underline"></div></div>
 					</div>
 					<div class="header-socials">
 						<a href="https://facebook.com"><img class="header__social" src="img/facebook.svg"
-								alt="Face Book"></a>___
+								alt="Face Book"></a>
 						<a href="https://instagram.com"><img class="header__social" src="img/instagram.svg"
-								alt="Instagram"></a>___
+								alt="Instagram"></a>
 						<a href="https://youtube.com"><img class="header__social" src="img/youtube.svg" alt="Youtube"></a>
 					</div>
 				<div></div>
 				<div class="navigation-burger"><span></span></div>
 			</div>
 			<div class="navigation-wrapper">
-				<a class="header__link" href="#about">About us.</a><br>
-				<a class="header__link" href="#sale">Sale.</a><br>
-				<a class="header__link" href="#collection">Collection.</a><br>
-				<a class="header__link" href="blog.html">Blog.</a><br>
-				<a class="header__link" href="#contact-us">Contact us.</a><br><br>
+				<div class="header__link-underline"><a class="header__link" href="#about">About us.</a><div class="underline"></div></div><br>
+				<div class="header__link-underline"><a class="header__link" href="#sale">Sale.</a><div class="underline"></div></div><br>
+				<div class="header__link-underline"><a class="header__link" href="#collection">Collection.</a><div class="underline"></div></div><br>
+				<div class="header__link-underline"><a class="header__link" href="blog.html">Blog.</a><div class="underline"></div></div><br>
+				<div class="header__link-underline"><a class="header__link" href="#contact-us">Contact us.</a><div class="underline"></div></div><br><br>
 				<h6 class="header__h6">We’ve extended our returns period to 30 days.</h6><br>
 				<a href="mailto:workout@email.com" class="header__contact text-center">workout@email.com</a><br>
 				<a href="tel:12345678900" class="header__contact text-center">+1 (234) 567 89 00</a><br>
-			<a href="https://facebook.com"><img class="header__social" src="img/facebook.svg" alt="Face Book"></a>___
-			<a href="https://instagram.com"><img class="header__social" src="img/instagram.svg"	alt="Instagram"></a>___
+			<a href="https://facebook.com"><img class="header__social" src="img/facebook.svg" alt="Face Book"></a>
+			<a href="https://instagram.com"><img class="header__social" src="img/instagram.svg"	alt="Instagram"></a>
 			<a href="https://youtube.com"><img class="header__social" src="img/youtube.svg" alt="Youtube"></a>
 			</div>
 		</nav>
@@ -133,9 +133,9 @@
 						keep selling comfortable and high-tech clothes and shoes for your outstanding results.</p>
 					<div class="about-socials">
 						<a href="https://facebook.com"><img class="about__social" src="img/facebook.svg"
-								alt="Face Book"></a>__
+								alt="Face Book"></a>
 						<a href="https://instagram.com"><img class="about__social" src="img/instagram.svg"
-								alt="Instagram"></a>__
+								alt="Instagram"></a>
 						<a href="https://youtube.com"><img class="about__social" src="img/youtube.svg"
 								alt="Youtube"></a>
 					</div>
@@ -211,7 +211,8 @@
 			<div class="base__container">
 				<div class="month__container">
 					<h4 class="discount__h4">SALE OF THE MONTH</h4>
-					<h1 class="discount__h1">Get Your Discount<span class="base__span">.</span></h1>
+					<h1 class="discount__h1">Get Your</h1>
+					<h1 class="discount__h1">Discount<span class="base__span">.</span></h1>
 					<a href="#sale" class="discount__link-button">Shop Now ⮕</a>
 				</div>
 			</div>
