--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 		<nav class="header-menu">
 			<div class="base__container menu__container">
 				<div class="header-logo__container">
-				<img class="header__logo" src="img/logo.svg" alt="Shop Logo">
+					<img class="header__logo" src="img/logo.svg" alt="Shop Logo">
 				</div>
 				<div class="header-links">
 					<a class="header__link" href="#about">About us.</a>
@@ -37,7 +37,8 @@
 				</div>
 				<div class="header-socials">
 					<a href="https://facebook.com"><img class="header__social" src="img/facebook.svg" alt="Face Book"></a>___
-					<a href="https://instagram.com"><img class="header__social" src="img/instagram.svg" alt="Instagram"></a>___
+					<a href="https://instagram.com"><img class="header__social" src="img/instagram.svg"
+							alt="Instagram"></a>___
 					<a href="https://youtube.com"><img class="header__social" src="img/youtube.svg" alt="Youtube"></a>
 				</div>
 			</div>
@@ -46,7 +47,8 @@
 			<div class="base__container">
 				<div class="aspire__container">
 					<h4 class="header__h4">ASPIRE TO MORE</h4>
-					<h1 class="header__h1">new <span class="header__h1-accent">collections</span> by top brands<span class="base__span">.</span></h1>
+					<h1 class="header__h1">new <span class="header__h1-accent">collections</span> by top brands<span
+							class="base__span">.</span></h1>
 					<a href="#collection" class="header__link-button">Shop Now ⮕</a>
 				</div>
 			</div>
@@ -114,8 +116,10 @@
 						keep selling comfortable and high-tech clothes and shoes for your outstanding results.</p>
 					<br><br>
 					<div class="about-socials">
-						<a href="https://facebook.com"><img class="about__social" src="img/facebook.svg" alt="Face Book"></a>__
-						<a href="https://instagram.com"><img class="about__social" src="img/instagram.svg" alt="Instagram"></a>__
+						<a href="https://facebook.com"><img class="about__social" src="img/facebook.svg"
+								alt="Face Book"></a>__
+						<a href="https://instagram.com"><img class="about__social" src="img/instagram.svg"
+								alt="Instagram"></a>__
 						<a href="https://youtube.com"><img class="about__social" src="img/youtube.svg" alt="Youtube"></a>
 					</div>
 				</div>
@@ -184,23 +188,23 @@
 		</section>
 		<!-- End of MidSeasonSale Olga Bondarenko-->
 		<!-- Start of Discount Олександр ALEKS code -->
-	<section class="discount-niger">
+		<section class="discount-niger">
 			<div class="base__container">
 				<h4>SALE OF THE MONTH</h4>
 				<h1 class="discount__h1">Get Your Discount<span class="base__span">.</span></h1>
 				<a href="#sale" class="discount__link-button">Shop Now ⮕</a>
 			</div>
-	</section>
+		</section>
 
 		<!-- End of Discount ALEKS code -->
 
 		<!-- Start of Main Collection Koval =======================================================================================================-->
 
 		<section id="#collection" class="main-collection">
-			<div class="main-collection__about __container">
+			<div class="main-collection__about base__container">
 				<div class="main-collection__title text">
-					<h2 class="text__title">main COLLECTION<span class="base__span">.</span></h2>
-					<div class="line"></div>
+					<h2 class="text__title">main COLLECTION</h2>
+					<div class="text__line"></div>
 					<p class="text__subtitle">Shop our main fitness collection for men and women represented by the famous
 						brands.</p>
 				</div>
@@ -215,7 +219,7 @@
 					</div>
 					<!-- ============================================================= -->
 					<div class="shop__items">
-						<div class="shop__item-women ">
+						<div class="shop__item-women">
 							<div class="card">
 								<div class="block-img">
 									<a class="card__img" href=""><img src="img/main-collection/women1.jpg" alt=""></a>
@@ -243,6 +247,7 @@
 						</div>
 					</div>
 				</div>
+			</div>
 		</section>
 		<!-- End of Main Collection Koval==============================================================================================================================-->
 
@@ -250,33 +255,12 @@
 		<section class="dealOfTheMonth">
 			<div class="deal__container">
 				<div class="deal__content">
-<<<<<<< HEAD
-					<h2 class="deal__title">Deal of the month</h2>
-					<div class="deal__price">puma sports bra<span>$50</span><s>$70</s></div>
-					<p class="deal__text">Start your fitness story right away with this<br>comfortable bra and get advantage
-						of our discount.</p>
-					<a class="deal__link" href="#Newarrivals"><span>More Details</span></a>
-					<div class="deal__countdown">
-						<div class="countdown-days">
-							<h3 class="days">Time</h3>
-							<h3>Days</h3>
-						</div>
-						<div class="countdown-hours">
-							<h3 class="hours">Time</h3>
-							<h3>Hours</h3>
-						</div>
-						<div class="countdown-minutes">
-							<h3 class="minutes">Time</h3>
-							<h3>Minutes</h3>
-						</div>
-						<div class="countdown-seconds">
-							<h3 class="seconds">Time</h3>
-							<h3>Seconds</h3>
-=======
 					<div class="deal_body">
 						<h2 class="deal__title">Deal of the month<span class="base__span">.</span></h2>
-						<div class="deal__text-price">puma sports bra<span class="deal__price">$50</span><span class="deal__crossed-out"><s>$70</s></span></div>
-						<p class="deal__text">Start your fitness story right away with this<br>comfortable bra and get advantage of our discount.</p>
+						<div class="deal__text-price">puma sports bra<span class="deal__price">$50</span><span
+								class="deal__crossed-out"><s>$70</s></span></div>
+						<p class="deal__text">Start your fitness story right away with this<br>comfortable bra and get
+							advantage of our discount.</p>
 						<a class="deal__link" href="#Newarrivals"><span>More Details</span></a>
 						<div class="deal__countdown">
 							<div class="countdown days">
@@ -295,17 +279,12 @@
 								<div class="seconds">Time</div>
 								<div>Seconds</div>
 							</div>
->>>>>>> 1c46831c31c402c69b658a4dcb1f04aba94c64cc
 						</div>
 					</div>
 				</div>
 				<div class="deal__image">
-<<<<<<< HEAD
-					<img class="deal__img" src="img/dealOfTheMonth/Deal-collection.jpg" alt="image-clothes"
+					<img class="deal__img" src="../img/deal-of-the-month/deal-collection.jpg" alt="image-clothes"
 						class="deal__img">
-=======
-					<img class="deal__img"src="../img/deal-of-the-month/deal-collection.jpg" alt="image-clothes" class="deal__img">
->>>>>>> 1c46831c31c402c69b658a4dcb1f04aba94c64cc
 				</div>
 			</div>
 		</section>
@@ -314,103 +293,105 @@
 		<!-- Start of New Arrivals -->
 		<!-- End of New Arrivals -->
 
-	<footer class="footer">
-		<section class="footer__container">
-			<!--first section of footer comntainer-->
-			<div class="footer__container__top">
-				<img class="footer__background" src="https://res2.weblium.site/res/60080b98d4893c0021b21b64/601137cc26eea30022cdc78e_optimized_5120" alt="background">
-				<div class="container__top__inside">
-					<div class="container__top__inside__empty">
-						<!--empty div-->
-					</div>
-					<div class="container__top__inside__first-order">
-						<!--first order div-->
-						<div class="first-order__inside">
-							<img class="first-order__inside__icon" src="http://www.w3.org/1999/xlink" alt="logo">
-							<div class="first-order__inside__text">
-								<span>10%</span>
-								<span>OFF YOUR FIRST ORDER. SIGN UP TO OUR NEWSLETTER TO GET THIS SPECIAL
-									OFFER.</span>
+		<footer class="footer">
+			<section class="footer__container">
+				<!--first section of footer comntainer-->
+				<div class="footer__container__top">
+					<img class="footer__background"
+						src="https://res2.weblium.site/res/60080b98d4893c0021b21b64/601137cc26eea30022cdc78e_optimized_5120"
+						alt="background">
+					<div class="container__top__inside">
+						<div class="container__top__inside__empty">
+							<!--empty div-->
+						</div>
+						<div class="container__top__inside__first-order">
+							<!--first order div-->
+							<div class="first-order__inside">
+								<img class="first-order__inside__icon" src="http://www.w3.org/1999/xlink" alt="logo">
+								<div class="first-order__inside__text">
+									<span>10%</span>
+									<span>OFF YOUR FIRST ORDER. SIGN UP TO OUR NEWSLETTER TO GET THIS SPECIAL
+										OFFER.</span>
+								</div>
 							</div>
 						</div>
-					</div>
-					<div class="container__top__inside__form">
-						<!--form div-->
-						<form class="footer__form" action="">
-							<div class="form_email__container">
-								<input id="form__email" type="email" placeholder="Your email address" required>
-							</div>
-							<button id="form__button" type="submit">Subscribe</button>
-						</form>
+						<div class="container__top__inside__form">
+							<!--form div-->
+							<form class="footer__form" action="">
+								<div class="form_email__container">
+									<input id="form__email" type="email" placeholder="Your email address" required>
+								</div>
+								<button id="form__button" type="submit">Subscribe</button>
+							</form>
+						</div>
 					</div>
 				</div>
-			</div>
 
-			<!--second section of footer comntainer-->
-			<div class="footer__container__middle">
-				<div class="footer__logo">
-					<div class="footer__logo__container">
-						<img src="img/logo.svg" alt="logo">
-						<p class="footer__logo__text">
-							Workout offers fitness clothing and footwear for those who want to change their lives
-							and bodies for better.
-						</p>
+				<!--second section of footer comntainer-->
+				<div class="footer__container__middle">
+					<div class="footer__logo">
+						<div class="footer__logo__container">
+							<img src="img/logo.svg" alt="logo">
+							<p class="footer__logo__text">
+								Workout offers fitness clothing and footwear for those who want to change their lives
+								and bodies for better.
+							</p>
+						</div>
 					</div>
+					<div class="footer__navigation">
+						<span class="footer__navigation__title">
+							NAVIGATION
+						</span>
+						<div class="navigation__link"></div>
+						<div>
+							<a class="footer__navigation__links" href="#about">About us.</a>
+							<a class="footer__navigation__links" href="#collection">Collection.</a>
+							<a class="footer__navigation__links" href="#blog.html">Blog.</a>
+							<a class="footer__navigation__links" href="#contacts.html">Contacts.</a>
+						</div>
+					</div>
+					<nav class="footer__shop__container">
+						<span class="footer__navigation__title">
+							SHOP
+						</span>
+						<div class="shop__line"></div>
+						<div>
+							<a class="footer__shop__links" href="#woman">Woman.</a>
+							<a class="footer__shop__links" href="#man">Man.</a>
+							<a class="footer__shop__links" href="#shoes">Shoes.</a>
+							<a class="footer__shop__links" href="#sale">Sale.</a>
+						</div>
+					</nav>
+					<nav class="footer__follow-us">
+						<span class="footer__navigation__title">
+							FOLLOW US
+						</span>
+						<div class="follow-us__line"></div>
+						<div class="footer__follow-us__link">
+							<a href="https://facebook.com">
+								<i class="fa-brands fa-facebook-square"></i>
+							</a>
+							<a href="https://instagram.com">
+								<i class="fa-brands fa-instagram-square"></i>
+							</a>
+							<a href="https://youtube.com">
+								<i class="fa-brands fa-youtube-square"></i>
+							</a>
+						</div>
+					</nav>
 				</div>
-				<div class="footer__navigation">
-					<span class="footer__navigation__title">
-						NAVIGATION
-					</span>
-					<div class="navigation__link"></div>
-					<div>
-						<a class="footer__navigation__links" href="#about">About us.</a>
-						<a class="footer__navigation__links" href="#collection">Collection.</a>
-						<a class="footer__navigation__links" href="#blog.html">Blog.</a>
-						<a class="footer__navigation__links" href="#contacts.html">Contacts.</a>
-					</div>
-				</div>
-				<nav class="footer__shop__container">
-					<span class="footer__navigation__title">
-						SHOP
-					</span>
-					<div class="shop__line"></div>
-					<div>
-						<a class="footer__shop__links" href="#woman">Woman.</a>
-						<a class="footer__shop__links" href="#man">Man.</a>
-						<a class="footer__shop__links" href="#shoes">Shoes.</a>
-						<a class="footer__shop__links" href="#sale">Sale.</a>
-					</div>
-				</nav>
-				<nav class="footer__follow-us">
-					<span class="footer__navigation__title">
-						FOLLOW US
-					</span>
-					<div class="follow-us__line"></div>
-					<div class="footer__follow-us__link">
-						<a href="https://facebook.com">
-							<i class="fa-brands fa-facebook-square"></i>
-						</a>
-						<a href="https://instagram.com">
-							<i class="fa-brands fa-instagram-square"></i>
-						</a>
-						<a href="https://youtube.com">
-							<i class="fa-brands fa-youtube-square"></i>
-						</a>
-					</div>
-				</nav>
-			</div>
 
-			<!--third section of footer comntainer-->
-			<div id="contact-us" class="footer__container__bottom">
-				<p class="footer__container__bottom__text">
-					© Created by
-				</p>
-				<p class="footer__container__bottom__text">
-					All rights Reserved
-				</p>
-			</div>
-		</section>
-	</footer>
+				<!--third section of footer comntainer-->
+				<div id="contact-us" class="footer__container__bottom">
+					<p class="footer__container__bottom__text">
+						© Created by
+					</p>
+					<p class="footer__container__bottom__text">
+						All rights Reserved
+					</p>
+				</div>
+			</section>
+		</footer>
 </body>
 
 </html>
