change base__button in header, sale, discount

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 				<div class="aspire__container">
 					<h4 class="header__h4">ASPIRE TO MORE</h4>
 					<h1 class="header__h1">new <span class="header__h1-accent">collections</span> by top brands<span class="base__span">.</span></h1>
-					<a href="#collection" class="header__link-button">Shop Now ⮕</a>
+					<a href="#collection" class="base__button">Shop Now ⮕</a>
 				</div>
 			</div>
 		</article>
@@ -167,7 +167,7 @@
 							</a>
 							<a href="trainers.html" class="sale__card-link">Adidas Cloudfoam Trainers</a>
 							<span class="sale__card-price">$60,00</span>
-							<input class="sale__input-button" type="submit" value="Add to Cart">
+							<input class="base__button" type="submit" value="Add to Cart">
 						</div>
 						<div class="sale__card">
 							<a href="shorts.html">
@@ -175,7 +175,7 @@
 							</a>
 							<a href="shorts.html" class="sale__card-link">Adidas Cloudfoam Trainers</a>
 							<span class="sale__card-price">$60,00</span>
-							<input class="sale__input-button" type="submit" value="Add to Cart">
+							<input class="base__button" type="submit" value="Add to Cart">
 						</div>
 						<div class="sale__card">
 							<a href="shoes.html">
@@ -183,7 +183,7 @@
 							</a>
 							<a href="shoes.html" class="sale__card-link">Adidas Cloudfoam Trainers</a>
 							<span class="sale__card-price">$60,00</span>
-							<input class="sale__input-button" type="submit" value="Add to Cart">
+							<input class="base__button" type="submit" value="Add to Cart">
 						</div>
 						<div class="sale__card card__media1">
 							<a href="top.html">
@@ -191,7 +191,7 @@
 							</a>
 							<a href="top.html" class="sale__card-link">Adidas Cloudfoam Trainers</a>
 							<span class="sale__card-price">$60,00</span>
-							<input class="sale__input-button" type="submit" value="Add to Cart">
+							<input class="base__button" type="submit" value="Add to Cart">
 						</div>
 						<div class="sale__card card__media1 card__media2">
 							<a href="t-shirt.html">
@@ -199,7 +199,7 @@
 							</a>
 							<a href="t-shirt.html" class="sale__card-link">Adidas Cloudfoam Trainers</a>
 							<span class="sale__card-price">$60,00</span>
-							<input class="sale__input-button" type="submit" value="Add to Cart">
+							<input class="base__button" type="submit" value="Add to Cart">
 						</div>
 					</div>
 				</div>
@@ -213,7 +213,7 @@
 					<h4 class="discount__h4">SALE OF THE MONTH</h4>
 					<h1 class="discount__h1">Get Your</h1>
 					<h1 class="discount__h1">Discount<span class="base__span">.</span></h1>
-					<a href="#sale" class="discount__link-button">Shop Now ⮕</a>
+					<a href="#sale" class="base__button">Shop Now ⮕</a>
 				</div>
 			</div>
 		</section>
