--- a/index.html
+++ b/index.html
@@ -256,9 +256,9 @@
 		<!-- Start of Main Collection Koval =======================================================================================================-->
 
 		<section id="collection" class="main-collection">
-			<div class="main-collection__about __container">
+			<div class="main-collection__about base__container">
 				<div class="main-collection__title text">
-					<h2 class="text__title">main COLLECTION<span class="base__span">.</span></h2>
+					<h2 class="text__title">main COLLECTION</h2>
 					<div class="line"></div>
 					<p class="text__subtitle">Shop our main fitness collection for men and women represented by the
 						famous
@@ -275,12 +275,12 @@
 					</div>
 					<!-- ============================================================= -->
 					<div class="shop__items">
-						<div class="shop__item-women">
+						<div class="shop__item-women shop-about">
 							<div class="card">
 								<div class="block-img">
 									<a class="card__img" href=""><img src="img/main-collection/women1.jpg" alt=""></a>
 								</div>
-								<a href="" class="card__text">Adidas Compression Tee</a>
+								<div class="card__text"><a href="">Adidas Compression Tee</a></div>
 								<div class="card__price">$33,00</div>
 								<a href="" class="card__link">Add to Cart</a>
 							</div>
@@ -288,7 +288,7 @@
 								<div class="block-img">
 									<a class="card__img" href=""><img src="img/main-collection/women2.jpg" alt=""></a>
 								</div>
-								<a href="" class="card__text">adidas compression Tee</a>
+								<div class="card__text"><a href="">Adidas Compression Tee</a></div>
 								<div class="card__price">$33,00</div>
 								<a href="" class="card__link">Add to Cart</a>
 							</div>
@@ -296,7 +296,61 @@
 								<div class="block-img">
 									<a class="card__img" href=""><img src="img/main-collection/women3.jpg" alt=""></a>
 								</div>
-								<a href="" class="card__text">Adidas Compression Tee</a>
+								<div class="card__text"><a href="">Adidas Compression Tee</a></div>
+								<div class="card__price">$33,00</div>
+								<a href="" class="card__link">Add to Cart</a>
+							</div>
+						</div>
+
+						<div class="shop__item-men shop-about">
+							<div class="card">
+								<div class="block-img">
+									<a class="card__img" href=""><img src="img/main-collection/men1.jpg" alt=""></a>
+								</div>
+								<div class="card__text"><a href="">Adidas Compression Tee</a></div>
+								<div class="card__price">$33,00</div>
+								<a href="" class="card__link">Add to Cart</a>
+							</div>
+							<div class="card">
+								<div class="block-img">
+									<a class="card__img" href=""><img src="img/main-collection/men2.jpg" alt=""></a>
+								</div>
+								<div class="card__text"><a href="">Adidas Compression Tee</a></div>
+								<div class="card__price">$33,00</div>
+								<a href="" class="card__link">Add to Cart</a>
+							</div>
+							<div class="card">
+								<div class="block-img">
+									<a class="card__img" href=""><img src="img/main-collection/men3.jpg" alt=""></a>
+								</div>
+								<div class="card__text"><a href="">Adidas Compression Tee</a></div>
+								<div class="card__price">$33,00</div>
+								<a href="" class="card__link">Add to Cart</a>
+							</div>
+						</div>
+
+						<div class="shop__item-shoes shop-about">
+							<div class="card">
+								<div class="block-img">
+									<a class="card__img" href=""><img src="img/main-collection/shoes1.jpg" alt=""></a>
+								</div>
+								<div class="card__text"><a href="">Adidas Compression Tee</a></div>
+								<div class="card__price">$33,00</div>
+								<a href="" class="card__link">Add to Cart</a>
+							</div>
+							<div class="card">
+								<div class="block-img">
+									<a class="card__img" href=""><img src="img/main-collection/shoes2.jpg" alt=""></a>
+								</div>
+								<div class="card__text"><a href="">Adidas Compression Tee</a></div>
+								<div class="card__price">$33,00</div>
+								<a href="" class="card__link">Add to Cart</a>
+							</div>
+							<div class="card">
+								<div class="block-img">
+									<a class="card__img" href=""><img src="img/main-collection/shoes3.jpg" alt=""></a>
+								</div>
+								<div class="card__text"><a href="">Adidas Compression Tee</a></div>
 								<div class="card__price">$33,00</div>
 								<a href="" class="card__link">Add to Cart</a>
 							</div>
