--- a/index.html
+++ b/index.html
@@ -97,14 +97,8 @@
 			<div class="base__container">
 				<div class="aspire__container">
 					<h4 class="header__h4">ASPIRE TO MORE</h4>
-<<<<<<< HEAD
-					<h1 class="header__h1">new <span class="header__h1-accent">collections</span> by top brands<span
-							class="base__span">.</span></h1>
-					<a href="#collection" class="header__link-button">Shop Now ⮕</a>
-=======
 					<h1 class="header__h1">new <span class="header__h1-accent">collections</span> by top brands<span class="base__span">.</span></h1>
 					<a href="#collection" class="base__button">Shop Now ⮕</a>
->>>>>>> a3d4973ed3f74203039b26222f67c9470001a401
 				</div>
 			</div>
 		</article>
@@ -261,9 +255,9 @@
 		<!-- Start of Main Collection Koval =======================================================================================================-->
 
 		<section id="collection" class="main-collection">
-			<div class="main-collection__about base__container">
+			<div class="main-collection__about __container">
 				<div class="main-collection__title text">
-					<h2 class="text__title">main COLLECTION</h2>
+					<h2 class="text__title">main COLLECTION<span class="base__span">.</span></h2>
 					<div class="line"></div>
 					<p class="text__subtitle">Shop our main fitness collection for men and women represented by the
 						famous
@@ -280,12 +274,12 @@
 					</div>
 					<!-- ============================================================= -->
 					<div class="shop__items">
-						<div class="shop__item-women shop-about">
+						<div class="shop__item-women">
 							<div class="card">
 								<div class="block-img">
 									<a class="card__img" href=""><img src="img/main-collection/women1.jpg" alt=""></a>
 								</div>
-								<div class="card__text"><a href="">Adidas Compression Tee</a></div>
+								<a href="" class="card__text">Adidas Compression Tee</a>
 								<div class="card__price">$33,00</div>
 								<a href="" class="card__link">Add to Cart</a>
 							</div>
@@ -293,7 +287,7 @@
 								<div class="block-img">
 									<a class="card__img" href=""><img src="img/main-collection/women2.jpg" alt=""></a>
 								</div>
-								<div class="card__text"><a href="">Adidas Compression Tee</a></div>
+								<a href="" class="card__text">adidas compression Tee</a>
 								<div class="card__price">$33,00</div>
 								<a href="" class="card__link">Add to Cart</a>
 							</div>
@@ -301,61 +295,7 @@
 								<div class="block-img">
 									<a class="card__img" href=""><img src="img/main-collection/women3.jpg" alt=""></a>
 								</div>
-								<div class="card__text"><a href="">Adidas Compression Tee</a></div>
-								<div class="card__price">$33,00</div>
-								<a href="" class="card__link">Add to Cart</a>
-							</div>
-						</div>
-
-						<div class="shop__item-men shop-about">
-							<div class="card">
-								<div class="block-img">
-									<a class="card__img" href=""><img src="img/main-collection/men1.jpg" alt=""></a>
-								</div>
-								<div class="card__text"><a href="">Adidas Compression Tee</a></div>
-								<div class="card__price">$33,00</div>
-								<a href="" class="card__link">Add to Cart</a>
-							</div>
-							<div class="card">
-								<div class="block-img">
-									<a class="card__img" href=""><img src="img/main-collection/men2.jpg" alt=""></a>
-								</div>
-								<div class="card__text"><a href="">Adidas Compression Tee</a></div>
-								<div class="card__price">$33,00</div>
-								<a href="" class="card__link">Add to Cart</a>
-							</div>
-							<div class="card">
-								<div class="block-img">
-									<a class="card__img" href=""><img src="img/main-collection/men3.jpg" alt=""></a>
-								</div>
-								<div class="card__text"><a href="">Adidas Compression Tee</a></div>
-								<div class="card__price">$33,00</div>
-								<a href="" class="card__link">Add to Cart</a>
-							</div>
-						</div>
-
-						<div class="shop__item-shoes shop-about">
-							<div class="card">
-								<div class="block-img">
-									<a class="card__img" href=""><img src="img/main-collection/shoes1.jpg" alt=""></a>
-								</div>
-								<div class="card__text"><a href="">Adidas Compression Tee</a></div>
-								<div class="card__price">$33,00</div>
-								<a href="" class="card__link">Add to Cart</a>
-							</div>
-							<div class="card">
-								<div class="block-img">
-									<a class="card__img" href=""><img src="img/main-collection/shoes2.jpg" alt=""></a>
-								</div>
-								<div class="card__text"><a href="">Adidas Compression Tee</a></div>
-								<div class="card__price">$33,00</div>
-								<a href="" class="card__link">Add to Cart</a>
-							</div>
-							<div class="card">
-								<div class="block-img">
-									<a class="card__img" href=""><img src="img/main-collection/shoes3.jpg" alt=""></a>
-								</div>
-								<div class="card__text"><a href="">Adidas Compression Tee</a></div>
+								<a href="" class="card__text">Adidas Compression Tee</a>
 								<div class="card__price">$33,00</div>
 								<a href="" class="card__link">Add to Cart</a>
 							</div>
