Index.html header repaired

--- a/index.html
+++ b/index.html
@@ -19,8 +19,7 @@
 				<div>
 					<h6 class="header__h6">We’ve extended our returns period to 30 days.</h6>
 				</div>
-				<div class="grid__contact"><a href="mailto:workout@email.com" class="header__contact">workout@email.com</a>
-				</div>
+				<div class="grid__contact"><a href="mailto:workout@email.com" class="header__contact">workout@email.com</a></div>
 				<div class="grid__contact"><a href="tel:12345678900" class="header__contact">+1 (234) 567 89 00</a></div>
 			</div>
 		</article>
@@ -30,67 +29,34 @@
 					<img class="header__logo" src="img/logo.svg" alt="Shop Logo">
 				</div>
 				<div class="header-links">
-					<<<<<<< HEAD <a class="header__link" href="#about">About us.</a>
-						<a class="header__link" href="#sale">Sale.</a>
-						<a class="header__link" href="#collection">Collection.</a>
-						<a class="header__link" href="blog.html">Blog.</a>
-						<a class="header__link" href="#contact-us">Contact us.</a>
-				</div>
-				<div class="header-socials">
-					<a href="https://facebook.com"><img class="header__social" src="img/facebook.svg" alt="Face Book"></a>___
-					<a href="https://instagram.com"><img class="header__social" src="img/instagram.svg"
-							alt="Instagram"></a>___
-					<a href="https://youtube.com"><img class="header__social" src="img/youtube.svg" alt="Youtube"></a>
-				</div>
-				=======
-				<div class="header__link-underline"><a class="header__link" href="#about">About us.</a>
-					<div class="underline"></div>
-				</div>
-				<div class="header__link-underline"><a class="header__link" href="#sale">Sale.</a>
-					<hr>
-					<div class="underline"></div>
-				</div>
-				<div class="header__link-underline"><a class="header__link" href="#collection">Collection.</a>
-					<div class="underline"></div>
-				</div>
-				<div class="header__link-underline"><a class="header__link" href="blog.html">Blog.</a>
-					<div class="underline"></div>
-				</div>
-				<div class="header__link-underline"><a class="header__link" href="#contact-us">Contact us.</a>
-					<div class="underline"></div>
-				</div>
-			</div>
-			<div class="header-socials">
-				<a href="https://facebook.com"><img class="header__social" src="img/facebook.svg" alt="Face Book"></a>
-				<a href="https://instagram.com"><img class="header__social" src="img/instagram.svg" alt="Instagram"></a>
-				<a href="https://youtube.com"><img class="header__social" src="img/youtube.svg" alt="Youtube"></a>
-			</div>
-			<div></div>
-			<div class="navigation-burger"><span></span></div>
+						<div class="header__link-underline"><a class="header__link" href="#about">About us.</a><div class="underline"></div></div>
+						<div class="header__link-underline"><a class="header__link" href="#sale">Sale.</a><hr><div class="underline"></div></div>
+						<div class="header__link-underline"><a class="header__link" href="#collection">Collection.</a><div class="underline"></div></div>
+						<div class="header__link-underline"><a class="header__link" href="blog.html">Blog.</a><div class="underline"></div></div>
+						<div class="header__link-underline"><a class="header__link" href="#contact-us">Contact us.</a><div class="underline"></div></div>
+					</div>
+					<div class="header-socials">
+						<a href="https://facebook.com"><img class="header__social" src="img/facebook.svg"
+								alt="Face Book"></a>
+						<a href="https://instagram.com"><img class="header__social" src="img/instagram.svg"
+								alt="Instagram"></a>
+						<a href="https://youtube.com"><img class="header__social" src="img/youtube.svg" alt="Youtube"></a>
+					</div>
+				<div></div>
+				<div class="navigation-burger"><span></span></div>
 			</div>
 			<div class="navigation-wrapper">
-				<div class="header__link-underline"><a class="header__link" href="#about">About us.</a>
-					<div class="underline"></div>
-				</div><br>
-				<div class="header__link-underline"><a class="header__link" href="#sale">Sale.</a>
-					<div class="underline"></div>
-				</div><br>
-				<div class="header__link-underline"><a class="header__link" href="#collection">Collection.</a>
-					<div class="underline"></div>
-				</div><br>
-				<div class="header__link-underline"><a class="header__link" href="blog.html">Blog.</a>
-					<div class="underline"></div>
-				</div><br>
-				<div class="header__link-underline"><a class="header__link" href="#contact-us">Contact us.</a>
-					<div class="underline"></div>
-				</div><br><br>
+				<div class="header__link-underline"><a class="header__link" href="#about">About us.</a><div class="underline"></div></div><br>
+				<div class="header__link-underline"><a class="header__link" href="#sale">Sale.</a><div class="underline"></div></div><br>
+				<div class="header__link-underline"><a class="header__link" href="#collection">Collection.</a><div class="underline"></div></div><br>
+				<div class="header__link-underline"><a class="header__link" href="blog.html">Blog.</a><div class="underline"></div></div><br>
+				<div class="header__link-underline"><a class="header__link" href="#contact-us">Contact us.</a><div class="underline"></div></div><br><br>
 				<h6 class="header__h6">We’ve extended our returns period to 30 days.</h6><br>
 				<a href="mailto:workout@email.com" class="header__contact text-center">workout@email.com</a><br>
 				<a href="tel:12345678900" class="header__contact text-center">+1 (234) 567 89 00</a><br>
-				<a href="https://facebook.com"><img class="header__social" src="img/facebook.svg" alt="Face Book"></a>
-				<a href="https://instagram.com"><img class="header__social" src="img/instagram.svg" alt="Instagram"></a>
-				<a href="https://youtube.com"><img class="header__social" src="img/youtube.svg" alt="Youtube"></a>
-				>>>>>>> d22996fc463618b11b499449142f97b14bb75446
+			<a href="https://facebook.com"><img class="header__social" src="img/facebook.svg" alt="Face Book"></a>
+			<a href="https://instagram.com"><img class="header__social" src="img/instagram.svg"	alt="Instagram"></a>
+			<a href="https://youtube.com"><img class="header__social" src="img/youtube.svg" alt="Youtube"></a>
 			</div>
 		</nav>
 		<article class="header-niger">
