--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
 						<p class="deal__text">Start your fitness story right away with this<br>comfortable bra and get
 							advantage of our discount.</p>
 						<a class="deal__link" href="#Newarrivals"><span class="deal-arrow">More Details</span></a>
-						<div class="deal__countdown">
+						<!-- <div class="deal__countdown">
 							<div class="countdown">
 								<div class="days item">Time</div>
 								<div class="count">Days</div>
@@ -300,7 +300,7 @@
 								<div class="seconds item">Time</div>
 								<div class="count">Seconds</div>
 							</div>
-						</div>
+						</div> -->
 					</div>
 				</div>
 				<div class="deal__image">
