added index main-colection

--- a/index.html
+++ b/index.html
@@ -97,14 +97,9 @@
 			<div class="base__container">
 				<div class="aspire__container">
 					<h4 class="header__h4">ASPIRE TO MORE</h4>
-<<<<<<< HEAD
 					<h1 class="header__h1">new <span class="header__h1-accent">collections</span> by top brands<span
 							class="base__span">.</span></h1>
-					<a href="#collection" class="header__link-button">Shop Now ⮕</a>
-=======
-					<h1 class="header__h1">new <span class="header__h1-accent">collections</span> by top brands<span class="base__span">.</span></h1>
 					<a href="#collection" class="base__button">Shop Now ⮕</a>
->>>>>>> a3d4973ed3f74203039b26222f67c9470001a401
 				</div>
 			</div>
 		</article>
@@ -283,7 +278,8 @@
 						<div class="shop__item-women shop-about">
 							<div class="card">
 								<div class="block-img">
-									<a class="card__img" href=""><img src="img/main-collection/women1.jpg" alt=""></a>
+									<a class="card__img" href="index-main-collection.html">
+										<img src="img/main-collection/women1.jpg" alt=""></a>
 								</div>
 								<div class="card__text"><a href="">Adidas Compression Tee</a></div>
 								<div class="card__price">$33,00</div>
