add media in sale section

--- a/index.html
+++ b/index.html
@@ -183,9 +183,9 @@
 							<span class="sale__card-price">$60,00</span>
 							<input class="base__button" type="submit" value="Add to Cart">
 						</div>
-						<div class="sale__card card__media1">
+						<div class="sale__card card__media2">
 							<a href="top.html">
-								<img class="sale__card-img" src="img/mid-season-sale/sale-top.png" alt="top">
+								<img class="sale__card-img card__media2" src="img/mid-season-sale/sale-top.png" alt="top">
 							</a>
 							<a href="top.html" class="sale__card-link">Adidas Cloudfoam Trainers</a>
 							<span class="sale__card-price">$60,00</span>
@@ -193,7 +193,7 @@
 						</div>
 						<div class="sale__card card__media1 card__media2">
 							<a href="t-shirt.html">
-								<img class="sale__card-img" src="img/mid-season-sale/sale-t-shirt.png" alt="t-shirt">
+								<img class="sale__card-img card__media1" src="img/mid-season-sale/sale-t-shirt.png" alt="t-shirt">
 							</a>
 							<a href="t-shirt.html" class="sale__card-link">Adidas Cloudfoam Trainers</a>
 							<span class="sale__card-price">$60,00</span>
